# simple_orm

./: .gitignore  TODO.md  pyproject.toml  requirements.txt  setup.py
simple_orm/: __init__.py  exceptions.py
simple_orm/config/: database.py
simple_orm/handlers/: __init__.py  count.py  create.py  delete.py  fetch.py  find.py  update.py
simple_orm/models/: base.py
src/simple_orm/handlers/: create.py
src/simple_orm/models/: base.py
src/simple_orm/query/: __init__.py  _helpers.py  builder.py  run.py
